# routes/api.php
@@ -4,6 +4,6 @@ use App\Http\Controllers\UserController;
 use App\Http\Controllers\ProjectController;
 use App\Http\Controllers\TimesheetController;
 
-Route::apiResource('users', UserController::class);
-Route::apiResource('projects', ProjectController::class);
-Route::apiResource('timesheets', TimesheetController::class);
+Route::apiResource('users', UserController::class)->middleware('auth:api');
+Route::apiResource('projects', ProjectController::class)->middleware('auth:api');
+Route::apiResource('timesheets', TimesheetController::class)->middleware('auth:api');
